# $Id$

2007-03-20	Konstantin V. Arkhipov

	* main/Containers/Unified/UnifiedContainer.class.php: fetched
	collection now excluded from serialization.

2007-03-19	Ivan Y. Khvostishkov

	* core/Form/Primitives/PrimitiveEnumeration.class.php: bugfix, value
	must be null on failed import.

2007-03-11	Konstantin V. Arkhipov

	* 0.8.6 released.

2007-03-02	Dmitry E. Demidov

	* core/Cache/WatermarkedPeer.class.php, 
	main/DAOs/Workers/FileSystemDaoWorker.class.php,
	main/DAOs/Workers/SmartDaoWorker.class.php,
	main/DAOs/Workers/VoodooDaoWorker.class.php: added ability to set separate 
	watermark on classes.
	
2007-02-26	Konstantin V. Arkhipov

	* core/Base/Enumeration.class.php: constructor's logic moved to
	setId() to be forward compatible with trunk.

	* core/Base/IdentifiableObject.class.php: setId() unfinalized to be
	forward compatible with trunk.

2007-02-22	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php: field collisions in inherited
	classes fixed.

2007-02-20	Dmitry E. Demidov

	* main/Containers/Unified/UnifiedContainer.class.php: sync list with
	clones after container save.

2007-02-19	Konstantin V. Arkhipov

	* main/Containers/Unified/UnifiedContainer.class.php: unsaved objects
	are not tracked by importList() now.

2007-02-16	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveInteger.class.php,
	meta/types/IntegerType.class.php,
	meta/types/SmallIntegerType.class.php: backport max/min constants from
	trunk.

2007-02-13	Konstantin V. Arkhipov

	* 0.8.5 released.

2007-02-13	Anton E. Lebedevich

	* main/Flow/PrototypedEditor.class.php,
	main/Flow/MethodMappedController.class.php: one more editor.

2007-02-10	Dmitry E. Demidov

	* core/Form/Primitives/ExplodedPrimitive.class.php: added support for
	regexp separator.

2007-02-09	Konstantin V. Arkhipov

	* main/Utils/ClassUtils.class.php: return value are omitted now for
	all methods.

	* main/Flow/: MonolithicEditor backported from trunk; also fixed
	SaveCommand logic.

2007-02-09	Dmitry E. Demidov
